--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux-api-middleware": "^2.2.0",
     "redux-implicit-oauth2": "^1.2.1",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "underscore": "1.8.3"
   },
   "devDependencies": {
